--- a/style.css
+++ b/style.css
@@ -2740,13 +2740,13 @@ body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
   width: 100%;
   height: 2px;
   background: #000000;
-  z-index: 5000; }
+  z-index: 9800; }
   @media (max-width: 768px) {
     #top-bar {
       display: none; } }
 
 .site-header {
-  z-index: 700;
+  z-index: 9700;
   position: fixed;
   margin: 0;
   padding: 0;
